# vizr

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: app.rs  data_loader.rs  filters.rs  main.rs  symlog.rs
