[package]
name = "vizr"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
egui_plot = "0.27.2"
polars = { version = "0.44.2", features = ["lazy", "parquet"] }
tokio = "1.48.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
