[package]
name = "vizr"
version = "0.1.0"
edition = "2024"

[features]
default = []
perf_tracing = []

# [profile.release]
# lto = "fat"
# opt-level = 3
# strip = true

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_plot = "0.31"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
regex = "1.0"
arrow = "57.0.0"
datafusion = "50.3.0"
futures = "0.3"
image = "0.24"
